--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -15,6 +15,8 @@
       & .background-image {
         transform: scale(1.1);
         transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+        filter: none;
+        -webkit-filter: grayscale(0);
       }
     
       & .content {
@@ -40,7 +42,10 @@
       width:100%;
       height: 100%;
       background-position: center;
-    background-size: cover;
+      background-size: cover;
+      filter: #7e7474;
+      -webkit-filter: grayscale(2);
+      transition:2s ease-in-out;   
     }
   
     .content {
@@ -51,9 +56,11 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
-      background-color: white;
+      background-color: #fcf1f1;
       opacity: 0.7;
       position: absolute;
+      
+
   
       .title {
         font-weight: bold;
