--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px 80px;
+    background-color: #fcf1f1;
   }
   
   .directory-menu {
