--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -27,11 +27,11 @@
         // transform: skewX(10deg);
     }
     .gift {
-        color:#d789d7;
+        color:#cd91bd;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 35px;
         font-family: 'Indie Flower', cursive;
-        border: 1px solid #d789d7;
+        border: 1px solid#cd91bd;
         
     }
     
