--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -33,5 +33,20 @@ $dark-color: #f8049c;
     &:focus {
       outline: none;
     }
+
+    &.google-sign-in {
+      background-color: #4285f4;
+      color: white;
+
+      &:hover {
+        background-color: #357ae8;
+        border: none;
+      }
+
+      &:active {
+        box-shadow: 0 0.5rem 1rem #357ae8;
+        color: #ffce44;
+      }
+    }
   }
   
