--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -9,7 +9,8 @@
     .logo-container {
         height: 100%;
         width: 150px;
-        padding: 25px;       
+        padding: 25px; 
+        ;      
       }
     
     .logo {
@@ -24,6 +25,8 @@
     .motto {
         font-size: 25px;
         color: #777;font-family: 'Indie Flower', cursive;
+        background: radial-gradient(rgb(245, 229, 248),#fcf1f1); 
+        
         // transform: skewX(10deg);
     }
     .gift {
@@ -31,13 +34,13 @@
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 35px;
         font-family: 'Indie Flower', cursive;
-        border: 1px solid#cd91bd;
+        border: 1px solid  #ce26a1;
         
     }
     
 
     .options {
-      width: 20%;
+      width: 50%;
       height: 100%;
       display: flex;
       align-items: center;
@@ -49,6 +52,7 @@
         padding: 15px 15px;
         text-decoration: none;
         color: black;
+        cursor: pointer;
       }
     }
   }
