--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,15 @@ h2 {
 span {
     color: #fababc;
 }
+
+body::-webkit-scrollbar {
+    width: 8px;               /* width of the entire scrollbar */
+  }
+  body::-webkit-scrollbar-track {
+    background: #fcf1f1;        /* color of the tracking area */
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: #cd91bd;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 1px solid #cd91bd;  /* creates padding around scroll thumb */
+  }
