--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    border-radius: 60px;
     margin: 0 7.5px 15px;
     overflow: hidden;
 
