--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -15,6 +15,15 @@
     
     .logo {
         height: 120px;
+
+        &:hover {
+          transform: scale(1.1);
+          filter: hue-rotate(25deg);
+        }
+        &:active {
+          transform: translateY(-5px);
+          
+        }
     }
     .motto-container {
         display: flex;
@@ -40,7 +49,7 @@
     
 
     .options {
-      width: 70%;
+      width: 75%;
       height: 100%;
       display: flex;
       align-items: center;
@@ -53,6 +62,7 @@
         text-decoration: none;
         color: black;
         cursor: pointer;
+        
       }
       
       .option-shop {background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97  51%, #DD5E89  100%)}
