--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
 body {
     font-family: 'Open Sans Condensed', sans-serif;
     padding: 20px 60px;
-    background-color: #fcf1f1;
+    /* background-color: #fcf1f1; */
+    background-image: repeating-linear-gradient(36deg, rgb(252,241,241) 0px, rgb(252,241,241) 19px,transparent 19px, transparent 21px),repeating-linear-gradient(80deg, rgb(252,241,241) 0px, rgb(252,241,241) 19px,transparent 19px, transparent 21px),repeating-linear-gradient(20deg, rgb(252,241,241) 0px, rgb(252,241,241) 19px,transparent 19px, transparent 21px),linear-gradient(100deg, rgb(195,141,210),rgb(250,186,188));
 }
 h2 {
     color: #c38dd2;
