added checkoutpage and checkoutitem comp and updated cart to use selectors from reselect

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -21,6 +21,11 @@
       
     }
 
+    .empty-message {
+      font-size: 20px;
+      margin: 50px auto;
+    }
+
     .cart-items::-webkit-scrollbar-thumb {
       background-color:#c38dd2;    /* color of the scroll thumb */
       border-radius: 20px;       /* roundness of the scroll thumb */
