--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -14,22 +14,42 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 70px;
       }
     }
     .name,
     .quantity,
     .price {
       width: 23%;
-      color:  #c38dd2;
+      color: #c38dd2;
     }
   
     .quantity {
-      padding-left: 20px;
+      display: flex;
+
+      .arrow {
+        cursor: pointer;
+
+        &:hover {
+          color: #f8049c;
+        transform: scale(1.1);
+        }
+      }
+      .value {
+        margin: 0 10px;
+        color: #c38dd2;
+      }
     }
   
     .remove-button {
       padding-left: 12px;
+      color:  #c38dd2;
       cursor: pointer;
+      
+      &:hover {
+        color: #f8049c;
+        transform: scale(1.1);        
+      }
     }
   }
   
