--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,7 +10,7 @@
         height: 100%;
         width: 150px;
         padding: 25px; 
-        ;      
+              
       }
     
     .logo {
@@ -63,21 +63,24 @@
         color: black;
         cursor: pointer;
         
+        &:hover {
+          border-bottom: solid 3px  #DD5E89;
+        }
       }
       
       .option-shop {background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97  51%, #DD5E89  100%)}
       .option-shop {
-         margin: 10px;
-         padding: 10px 20px;
-         text-align: center;
-         text-transform: uppercase;
-         transition: 0.5s;
-         background-size: 200% auto;
-         color: white;            
-         box-shadow: 0 0 20px #eee;
-         border-radius: 10px;
-         display: block;
-       }
+        margin: 10px;
+        padding: 10px 20px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: white;            
+        box-shadow: 0 0 20px #eee;
+        border-radius: 10px;
+        display: block;      
+        }
 
        .option-shop:hover {
          background-position: right center; /* change the direction of the change here */
