--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -10,13 +10,23 @@
     .shopping-icon {
       width: 50px;
       height: 50px;
+
+      @media only screen and (max-width : 520px) {
+        width: 30px;
+        height: 30px;
+      }
     }
   
     .item-count {
       position: absolute;
       font-size: 20px;
       font-weight: bold;
-      bottom: 5px;     
+      bottom: 5px;
+      
+      @media only screen and (max-width : 520px) {
+        font-size: 15px;
+        bottom: 3px;
+      }
     }
   }
   
