--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,7 +10,13 @@
         height: 100%;
         width: 150px;
         padding: 25px; 
-              
+        
+        @media only screen and (max-width : 520px) {
+          padding: 5px;
+          width: 80px;
+          position: relative;
+          top: 18px;
+        }
       }
     
     .logo {
@@ -24,17 +30,29 @@
           transform: translateY(-5px);
           
         }
+
+        @media only screen and(max-width : 520px) {
+          height: 80px;
+        }
     }
     .motto-container {
         display: flex;
         align-items: center;
         padding: 0 20%;
         text-align: center;
+
+        @media only screen and (max-width : 520px) {
+          padding: 0 2%;
+        }
     }
     .motto {
         font-size: 25px;
         color: #777;font-family: 'Indie Flower', cursive;
         background: radial-gradient(rgb(245, 229, 248),#fcf1f1); 
+        @media only screen and (max-width : 520px) {
+          
+          font-size: 16px;
+        }
         
         // transform: skewX(10deg);
     }
@@ -44,6 +62,10 @@
         font-size: 35px;
         font-family: 'Indie Flower', cursive;
         border: 1px solid  #ce26a1;
+
+        @media only screen and (max-width : 520px) {
+          font-size: 25px;
+        }
         
     }
     
@@ -55,6 +77,12 @@
       align-items: center;
       justify-content: flex-end;
       font-size: 30px;
+
+      @media only screen and (max-width : 520px) {
+        width: 25%;
+        flex-direction: column;
+        font-size: 12px;
+      }
       
       
       .option {
@@ -62,6 +90,10 @@
         text-decoration: none;
         color: black;
         cursor: pointer;
+
+        @media only screen and (max-width : 520px) {
+          padding: 5px 5px;
+        }
         
         &:hover {
           border-bottom: solid 3px  #DD5E89;
