--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -29,6 +29,10 @@
 
     &.large {
       height:420px;
+
+      @media only screen and (max-width : 520px) {
+        height: 240px;
+      }
     }
   
     &:first-child {
