--- a/src/components/social/social.styles.scss
+++ b/src/components/social/social.styles.scss
@@ -5,6 +5,10 @@
     align-items: center;
     justify-content: flex-end;
 
+    @media only screen and (max-width : 520px) {
+        width: 100%;
+      }
+
     .fa-2x {
         color: #c38dd2;
         padding-right: 18px;
