--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -1,8 +1,13 @@
 .aboutpage { 
     width: 850px;
     display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin-top: 3%;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 3%;
+
+    @media only screen and (max-width : 520px) {
+        display: block;
+        width: 422px;
+    }
 
     .fotografie {
         width: 80vh;
@@ -11,6 +16,11 @@
 
         &:hover {
             opacity: 0.7;
+        }
+
+        @media only screen and (max-width : 520px) {
+            width: 44vh;
+            margin-bottom: 3%;
         }
     }
     .about-alina {
@@ -23,6 +33,12 @@
         border-radius: 38% 62% 82% 18% / 59% 22% 78% 41%;
         position: relative;
         z-index: 1;
+        
+        @media only screen and (max-width : 520px) {
+            width: 350px;
+            font-size: 20px;
+            border: 4px dashed #cd91bd;
+        }
         
         .info {
             background-color: #ffdada;
