--- a/src/components/colection-preview/colection-preview.styles.scss
+++ b/src/components/colection-preview/colection-preview.styles.scss
@@ -2,6 +2,10 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+
+    @media only screen and (max-width : 520px) {
+      margin-bottom: 47px;
+    }
   
     .title {
       font-size: 28px;
