--- a/src/components/collection-items/collection-item.styles.scss
+++ b/src/components/collection-items/collection-item.styles.scss
@@ -5,6 +5,10 @@
     height: 350px;
     align-items: center;
     position: relative;
+
+    @media only screen and (max-width : 520px) {
+      height: 130px;
+    }
     
   
     .image {
@@ -13,6 +17,10 @@
       background-size: cover;
       background-position: center;
       margin-bottom: 5px;
+
+      @media only screen and (max-width : 520px) {
+        width: 138%;
+      }
     }
 
     .custom-button {
@@ -21,6 +29,11 @@
       position: absolute;
       top: 255px;
       display: none;
+
+      @media only screen and (max-width : 520px) {
+        width: 70%;
+        top: 55px;
+      }
     }
 
     &:hover {
@@ -40,6 +53,10 @@
       justify-content: space-between;
       font-size: 25px;
       font-weight: 500;
+
+      @media only screen and (max-width : 520px) {
+        font-size: 16px;
+      }
   
       .name {
         width: 90%;
