--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -19,6 +19,14 @@ $dark-color: #f8049c;
     cursor: pointer;
     display: flex;
     justify-content: center;
+
+    @media only screen and (max-width : 520px) {
+      line-height: 25px;
+      font-size: 12px;
+      padding: 1px;
+      min-width: 80px;
+      height: 25px;
+    }
   
     &:hover {
       background-color:$light-color;
