--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -33,6 +33,8 @@
 
         @media only screen and(max-width : 520px) {
           height: 80px;
+          position: relative;
+          top: 10%;
         }
     }
     .motto-container {
@@ -71,7 +73,7 @@
     
 
     .options {
-      width: 75%;
+      width: 41%;
       height: 100%;
       display: flex;
       align-items: center;
