--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+
+    @media only screen and (max-width : 520px) {
+      width: 85%;
+    }
   
     .checkout-header {
       width: 100%;
@@ -29,12 +33,20 @@
       margin-top: 30px;
       margin-left: auto;
       font-size: 36px;
+
+      @media only screen and (max-width : 520px) {
+        font-size: 28px;
+      }
       
     }
 
     .checkout-hb {
       font-size: 25px;
       color:  #c38dd2;
+
+      @media only screen and (max-width : 520px) {
+        font-size: 20px;
+      }
     }
 
     .buy-now {
@@ -44,10 +56,18 @@
       font-size: 60px;
       text-align: center;
 
+      @media only screen and (max-width : 520px) {
+        font-size: 30px;
+      }
+
       .buy-text {
         font-size: 40px;
         font-weight: 700;
         color: #f8049c;
+
+        @media only screen and (max-width : 520px) {
+          font-size: 18px;
+        }
       }
 
     }
